# GameSorting

./: AUTHOR  CMakeLists.txt  LICENCE  LICENSE  README.md  gamesorting.qrc  gamesorting.rc
include/: AboutDialog.h  AbstractListView.h  BooksListView.h  CMDOpts.h  Common.h  CommonListView.h  CommonStruct.h  DataStruct.h  FilterDialog.h  GameListModel.h  GameListView.h  GameStarDelegate.h  GameStarEditor.h  GameStarRating.h  GameTabAndList.h  GameTextLineEditor.h  LicenceDialog.h  ListTableView.h  ListViewDelegate.h  MainWindow.h  MoviesListView.h  SaveInterface.h  SeriesListView.h  Settings.h  SettingsDialog.h  SqlListView.h  SqlUtilityTable.h  StarEditor.h  StarWidget.h  TabAndList.h  TabLineEdit.h  TableModel.h  TableModelBooks.h  TableModelBooks_UtilityInterface.h  TableModelCommon.h  TableModelCommon_UtilityInterface.h  TableModelGame.h  TableModelGame_UtilityInterface.h  TableModelMovies.h  TableModelMovies_UtilityInterface.h  (+10 more)
src/: AboutDialog.cpp  AbstractListView.cpp  BooksListView.cpp  CMDOpts.cpp  Common.cpp  CommonListView.cpp  CommonStruct.cpp  FilterDialog.cpp  GameListModel.cpp  GameListView.cpp  GameStarDelegate.cpp  GameStarEditor.cpp  GameStarRating.cpp  GameTabAndList.cpp  GameTextLineEditor.cpp  LicenceDialog.cpp  ListTableView.cpp  ListViewDelegate.cpp  MainWindow.cpp  MoviesListView.cpp  SaveInterface.cpp  SaveInterface_Books.cpp  SaveInterface_Common.cpp  SaveInterface_Game.cpp  SaveInterface_Movies.cpp  SaveInterface_Series.cpp  SeriesListView.cpp  Settings.cpp  SettingsDialog.cpp  SqlListView.cpp  SqlUtilityTable.cpp  SqlUtilityTable_Books.cpp  SqlUtilityTable_Common.cpp  SqlUtilityTable_Game.cpp  SqlUtilityTable_Movies.cpp  SqlUtilityTable_Series.cpp  StarEditor.cpp  StarWidget.cpp  TabAndList.cpp  TabLineEdit.cpp  (+22 more)
